--- a/src/screens/CodingAssignment/style.css
+++ b/src/screens/CodingAssignment/style.css
@@ -300,6 +300,8 @@
   padding: 16px;
   position: relative;
   width: 100%;
+  cursor: no-drop;
+
 }
 
 .coding-assignment .radio-button {
@@ -441,9 +443,10 @@
 .coding-assignment .text-field-2 {
   align-items: center;
   align-self: stretch;
-  background-color: #d7ecdd;
+  
   border: 2px solid;
-  border-color: #47b968;
+  border-color: #bebebe;
+  border-radius: 4px;
   border-radius: 4px;
   display: flex;
   flex: 0 0 auto;
@@ -455,6 +458,12 @@
   width: 100%;
   cursor: pointer;
 }
+.coding-assignment .text-field-2.active{
+  background-color: #d7ecdd;
+  border: 2px solid;
+  border-color: #47b968;
+}
+
 
 .coding-assignment .text-11 {
   color: #3c4852;
@@ -562,6 +571,11 @@
   cursor: pointer;
 }
 
+.coding-assignment .text-field-3.active{
+  background-color: #d7ecdd;
+  border: 2px solid;
+  border-color: #47b968;
+}
 .coding-assignment .text-field-4 {
   align-items: center;
   align-self: stretch;
@@ -579,6 +593,12 @@
   width: 100%;
   cursor: pointer;
 }
+.coding-assignment .text-field-4.active{
+  background-color: #d7ecdd;
+  border: 2px solid;
+  border-color: #47b968;
+}
+
 
 .coding-assignment .summary-container {
   align-items: center;
